--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ img{
 /* CONTAINER */
 .container{
     width: 100%;
-    min-width: 1192px;
+    max-width: 1192px;
     padding-left: 20px;
     padding-right: 20px;
     margin-right: auto;
